Added comments and warm-up runs detection

--- a/KDE_Speed_Analysis.ipynb
+++ b/KDE_Speed_Analysis.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "fa975cf6",
    "metadata": {},
    "outputs": [
@@ -99,21 +99,12 @@
     "        start_of_iterations.append( (line,i) )\n",
     "    elif line.find('Done.') > -1:\n",
     "        end_of_iterations.append( (line,i) )\n",
-    "\n",
-    "\n",
-    "# This one will seperate each benchmark set into its own string\n",
-    "#split_into_seperate_executions = engine.compile( ' some stuff baby will help me make' )\n",
-    "\n",
-    "# This one will find \"Running . . . End\"\n",
-    "#split_into_data_frame = engine.compile( ' some other stuff baby will help me make ' )\n",
-    "\n",
-    "# This one will find all speed limit changes\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "beb01c48",
    "metadata": {},
    "outputs": [],
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "7c2da41e",
    "metadata": {},
    "outputs": [],
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "0db41270",
    "metadata": {},
    "outputs": [],
@@ -159,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "33578674",
    "metadata": {},
    "outputs": [
@@ -194,11 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "9adfe063",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Idea - First loop looks to consume any speed changes that happen in between iterations then loops to add intra\n",
+    "#         speed changes to a list. One important assumption is that starting speed is 100. Could implement a check\n",
+    "#          to ensure that's true but not currently worried about it.\n",
+    "\n",
     "current_speed_idx = 0\n",
     "current_speed = 100\n",
     "runs_w_speed = []\n",
@@ -210,19 +205,25 @@
     "    end_current_entry_loc = entry[1]\n",
     "    current_speed_loc = speed_changes[current_speed_idx][1]\n",
     "    \n",
+    "    # Inter Loop - consume and update speed to be the last change before the start of current iteration\n",
     "    while start_current_entry_loc > current_speed_loc:\n",
     "        current_speed_idx += 1\n",
     "        current_speed_loc = speed_changes[current_speed_idx][1]\n",
     "        current_speed = speed_changes[current_speed_idx-1][0]\n",
     "    \n",
+    "    # Intra Loop - append most recent speed to list, update speed and repeat until we find a speed change\n",
+    "    #               after end of current iteration\n",
     "    while end_current_entry_loc > current_speed_loc:\n",
     "        temp_speeds.append( current_speed )\n",
     "        current_speed_idx += 1\n",
     "        current_speed_loc = speed_changes[current_speed_idx][1]\n",
     "        current_speed = speed_changes[current_speed_idx-1][0]\n",
     "        \n",
+    "    # This ensures that the speed list isn't empty and that if there are no changes it has the most recent speed\n",
     "    temp_speeds.append(current_speed)\n",
     "    \n",
+    "    # This series of if/else attaches the appropriate pattern/program name to each iteration.\n",
+    "    # This logic isn't great but not sure how to clean it up\n",
     "    if start_current_entry_loc < start_of_sections[1][1]:\n",
     "        name = start_of_sections[0][0]\n",
     "    elif start_current_entry_loc < start_of_sections[2][1]:\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "39ce1b46",
    "metadata": {},
    "outputs": [
@@ -264,12 +265,17 @@
        "('abram_lpeg', (16, 19), [100])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# This sections removes duplicate consecutive outputs from a bug in the data generating program.\n",
+    "#  Each hyperfine loop instantiated a version of the speed monitor but didn't ever close it. Then when the 2nd loop\n",
+    "#  started, Longword pattern, each speed monitor instance was reporting the data. Thus double reports of the \n",
+    "#  same data. This goes through and pops all those double reports.\n",
+    "\n",
     "for run in runs_w_speed:\n",
     "    if len(run[2]) > 1:\n",
     "        counter = len(run[2])-1\n",
@@ -291,24 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "2453ba88",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[100], [100], [100], [100, 96, 93, 96], [96, 100], [100, 96, 100, 96], [96, 100, 96, 100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100], [100]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "lpeg_Abram_Speed = []\n",
     "Pexl_Abram_Speed = []\n",
     "Rosie_Abram_Speed = []\n",
     "lpeg_Longword_Speed = []\n",
     "\n",
+    "# This creates a dictionary containing each of the pattern/program combos found in the transcript file. Keys are\n",
+    "#  the pattern_program name and values are a list lists of the \"cpu speed\" for each iteration whose \"name\" \n",
+    "#  matchs the key.\n",
     "Speed_Dic ={}\n",
     "patterns_identified = []\n",
     "for item in start_of_sections:\n",
@@ -319,32 +321,12 @@
     "    for run in runs_w_speed:\n",
     "        name = run[0]\n",
     "        if name.find(pattern) != -1:\n",
-    "            Speed_Dic[pattern].append(run[2])\n",
-    "\n",
-    "print(Speed_Dic['abram_lpeg'])\n"
+    "            Speed_Dic[pattern].append(run[2])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b5e29615",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "3027a4a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "speed_list = [lpeg_Abram_Speed,Pexl_Abram_Speed,Rosie_Abram_Speed,lpeg_Longword_Speed]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "b65b4cbd",
    "metadata": {},
    "outputs": [
@@ -353,11 +335,19 @@
      "output_type": "stream",
      "text": [
       "longword-captureAll.json\n",
-      "abram-captureAll.json\n"
+      "Found  5  warm up runs.\n",
+      "abram-captureAll.json\n",
+      "Found  5  warm up runs.\n",
+      "Found  5  warm up runs.\n",
+      "Found  5  warm up runs.\n"
      ]
     }
    ],
    "source": [
+    "# This creates a dictionary whose keys are the pattern_program combo found in the transcript. The values are a \n",
+    "#  two dimensional dataframe. 1 column is the duration of each iteration. 2nd column is a list of the \"cpu speed/s\"\n",
+    "#  during that iteration.\n",
+    "\n",
     "DF_Dic ={}\n",
     "\n",
     "folder_path = currentPath +'/'\n",
@@ -391,30 +381,13 @@
     "        \n",
     "        tempDF = pd.DataFrame(columns = [found_prog,found_prog+'_Speed'])\n",
     "        tempDF[found_prog] = temp.iloc[j,0]['times']\n",
-    "        tempDF[found_prog+'_Speed'] = Speed_Dic[name_pattern+'_'+found_prog][5:]\n",
+    "        warmup_runs = len(Speed_Dic[name_pattern+'_'+found_prog]) - tempDF[ found_prog ].size\n",
+    "        # There are 5 warm-up iterations before each run is recorded. These warmups are in the transcript but not \n",
+    "        #  the actual data.\n",
+    "        print('Found ',warmup_runs,' warm up runs.')\n",
+    "        tempDF[found_prog+'_Speed'] = Speed_Dic[name_pattern+'_'+found_prog][warmup_runs:]\n",
     "        \n",
     "        DF_Dic[name_pattern+'_'+found_prog] = tempDF.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "74cfab7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['longword_lpeg', 'abram_lpeg', 'abram_pexl', 'abram_rosie'])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DF_Dic.keys()"
    ]
   },
   {
@@ -427,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "eacb3aef",
    "metadata": {},
    "outputs": [],
@@ -446,14 +419,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fca57f8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "f428ca3e",
    "metadata": {},
@@ -463,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "083d2857",
    "metadata": {},
    "outputs": [],
@@ -519,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "c8dcd126",
    "metadata": {},
    "outputs": [
