Cleaned up output from file processing

--- a/KDE_Speed_Analysis.ipynb
+++ b/KDE_Speed_Analysis.ipynb
@@ -29,7 +29,7 @@
     "def Create_DF(Speed_Dic,file,path):\n",
     "    DF_Dic ={}\n",
     "    counter = 2\n",
-    "    print('File name - ',file+'\\n')\n",
+    "    #print('File name - ',file+'\\n')\n",
     "    name_pattern = file.split('-')[0]\n",
     "    assert file.find('.json') != -1, ('Trying to read a non .json file '+file)\n",
     "    temp = pd.read_json(path+file, orient = 'records')\n",
@@ -46,14 +46,22 @@
     "            found_prog = 'rosie'\n",
     "\n",
     "        print('   Pattern Name - ',name_pattern+'_'+found_prog)\n",
-    "        tempDF = pd.DataFrame(columns = [found_prog,found_prog+'_Speed'])\n",
+    "        if Speed_Dic:\n",
+    "            tempDF = pd.DataFrame(columns = [found_prog,found_prog+'_Speed'])\n",
+    "        else:\n",
+    "            tempDF = pd.DataFrame(columns = [found_prog])\n",
     "        tempDF[found_prog] = temp.iloc[j,0]['times']\n",
-    "        warmup_runs = len(Speed_Dic[name_pattern+'_'+found_prog]) - tempDF[ found_prog ].size\n",
+    "        if Speed_Dic:\n",
+    "            warmup_runs = len(Speed_Dic[name_pattern+'_'+found_prog]) - tempDF[ found_prog ].size\n",
+    "        else:\n",
+    "            print('No transcript file provided')\n",
+    "            warmup_runs = 0\n",
     "        # There are 5 warm-up iterations before each run is recorded. These warmups are in the transcript but not \n",
     "        #  the actual data.\n",
     "        print('      Found',warmup_runs,'warm up runs.\\n')\n",
     "        #print('Length of json ',tempDF[found_prog].shape[0],' Length of .txt ',len(Speed_Dic[name_pattern+'_'+found_prog]))\n",
-    "        tempDF[found_prog+'_Speed'] = Speed_Dic[name_pattern+'_'+found_prog][warmup_runs:]\n",
+    "        if Speed_Dic:\n",
+    "            tempDF[found_prog+'_Speed'] = Speed_Dic[name_pattern+'_'+found_prog][warmup_runs:]\n",
     "\n",
     "        key_name = name_pattern+'_'+found_prog\n",
     "        if key_name in DF_Dic.keys():\n",
@@ -73,25 +81,44 @@
    "outputs": [],
    "source": [
     "def Read_Transcript2(path):\n",
-    "    print(path)\n",
+    "    #print(path)\n",
     "    with open(path) as f:\n",
     "        lines = f.readlines()\n",
     "\n",
     "    f.close()\n",
     "\n",
-    "    section = None\n",
-    "    speed = 100\n",
-    "\n",
+    "    # Either 'pexl','lpeg', or 'rose' followed by any number of characters until find a WORD followed by a number\n",
     "    find_prog_patt = '(pexl|lpeg|rosie).* (\\\\w+) +\\\\d+'\n",
     "    find_prog_patt_searcher = re.compile(find_prog_patt)\n",
     "\n",
+    "    # Find a DIGIT followed by a new line character\n",
     "    speed_limit_pattern = ' (\\\\d+)\\n'\n",
     "    speed_limit_searcher = re.compile(speed_limit_pattern)\n",
     "\n",
     "    Speed_Dic = {}\n",
     "    tempList = []\n",
     "    speedList = []\n",
+    "    section = None\n",
+    "    speed = 100\n",
     "    \n",
+    "    #Logic - reads line by line, When a line contains 'Benchmark' extract the pattern/program,if able print error \n",
+    "    #      - if doesn't conform to expectations, and update section to the that. After the 1st one it also stores\n",
+    "    #      - the just ended section in a dictionary with its name as the key. If a line contains 'Running' append\n",
+    "    #      - the current CPU Speed to speed list. If a line contains 'CPU Speed Limit' extract the numeric speed,\n",
+    "    #      - if able and print error if it doesn't conform to expectations. Update speed and if found 'Running' \n",
+    "    #      - and not yet 'Done' append new speed to speed list. If a line contains 'Done' append speed list to \n",
+    "    #      - section list and clear speed list. \n",
+    "    # \n",
+    "    #      - Each pattern_program tested is output to the transcript. There are X, usualy 5, warm-up runs and then\n",
+    "    #      - Y number of timed runs which are recorded into the JSON output. Each warm-up and timed run outputs to\n",
+    "    #      - the terminal 'Running'+'Some info about the test files'+'Done.' all on individual lines. There is a\n",
+    "    #      - seperate OS program that reports when the OS has decided to throttle the CPU speed due to heat/battery\n",
+    "    #      - concerns. These reports can come outside of an \"iteration\", while the test program is storing the time\n",
+    "    #      - data and preparing for next test or while the test is running. If it happens outside an iteration we\n",
+    "    #      - simply update the speed. If it happens during an iteraction we make a list of the times it changes. \n",
+    "    #      - The goal is to do a slightly more sophisticated analysis with this data. Such as considering the \n",
+    "    #      - number of speed changes or altering the iteraction runtime based on the simple average of the speeds.\n",
+    "    #\n",
     "    for i in range(0,len(lines)):\n",
     "        line = lines[i]\n",
     "\n",
@@ -105,7 +132,7 @@
     "                Speed_Dic[section] = tempList\n",
     "                section = patt_prog\n",
     "                tempList = []\n",
-    "            print(section, i)\n",
+    "            #print(section, i)\n",
     "        elif line.find('CPU_Speed_Limit') > -1:\n",
     "            match = speed_limit_searcher.search(line)\n",
     "            if match is None:\n",
@@ -191,26 +218,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".DS_Store\n",
-      "Run2\n",
-      "Plugged_In_Browser_8_10_22-2/Run2/transcript.txt\n",
-      "abram_lpeg 15\n",
-      "dict_keys(['abram_lpeg'])\n",
-      "File name -  abram-captureAll-27379.json\n",
+      "Trying folder/file - \" .DS_Store \" . . .\n",
+      "   Not a folder or did not contain a .txt or .json file\n",
       "\n",
+      "Trying folder/file - \" Run2 \" . . .\n",
+      "    Found .txt file - transcript.txt - processing . . .\n",
+      "\n",
+      "    Pattern_Program combinations found in - transcript.txt \n",
+      "\n",
+      "         abram_lpeg \n",
+      "\n",
+      "Found .json file - abram-captureAll-27379.json - processing . . .\n",
       "   Pattern Name -  abram_lpeg\n",
       "      Found 5 warm up runs.\n",
       "\n",
-      "Run1\n",
-      "Plugged_In_Browser_8_10_22-2/Run1/transcript2.txt\n",
-      "abram_lpeg 11\n",
-      "dict_keys(['abram_lpeg'])\n",
-      "File name -  abram-captureAll-4258.json\n",
+      "Trying folder/file - \" Run1 \" . . .\n",
+      "    Found .txt file - transcript2.txt - processing . . .\n",
       "\n",
+      "    Pattern_Program combinations found in - transcript2.txt \n",
+      "\n",
+      "         abram_lpeg \n",
+      "\n",
+      "Found .json file - abram-captureAll-4258.json - processing . . .\n",
       "   Pattern Name -  abram_lpeg\n",
       "      Found 5 warm up runs.\n",
       "\n",
-      "dict_keys(['Run2-abram', 'Run1-abram'])\n"
+      "Folder-pattern Found in folder \" Plugged_In_Browser_8_10_22-2/ \"\n",
+      "\n",
+      "     Run2-abram \n",
+      "\n",
+      "     Run1-abram \n",
+      "\n"
      ]
     }
    ],
@@ -225,20 +263,29 @@
     "first_layer = os.listdir(currentPath)\n",
     "\n",
     "overallDF_Dic = {}\n",
+    "Speed_Dic = None\n",
     "\n",
     "for folder in first_layer:\n",
-    "    print(folder)\n",
+    "    print('Trying folder/file - \\\"',folder,'\\\" . . .')\n",
     "    if folder.find('Run') > -1:\n",
     "        second_layer = os.listdir(folder_path+folder)\n",
     "        for file in second_layer:\n",
     "            if (file.find('.txt') > -1) and Real_File(file):\n",
+    "                print('    Found .txt file -',file,'- processing . . .\\n')\n",
     "                Speed_Dic = Read_Transcript2(folder_path+folder+'/'+file)\n",
-    "                print(Speed_Dic.keys())\n",
+    "                print('    Pattern_Program combinations found in -',file,'\\n')\n",
+    "                for key in Speed_Dic.keys():\n",
+    "                    print('        ',key,'\\n')\n",
     "        for file in second_layer:\n",
     "            if (file.find('.json') > -1) and Real_File(file):\n",
+    "                print('Found .json file -',file,'- processing . . .')\n",
     "                name = file.split('-')[0]\n",
     "                overallDF_Dic[folder+'-'+name] = Create_DF(Speed_Dic,file,folder_path+folder+'/')\n",
-    "print(overallDF_Dic.keys())"
+    "    else:\n",
+    "        print('   Not a folder or did not contain a .txt or .json file\\n')\n",
+    "print('Folder-pattern Found in folder \\\"',folder_path,'\\\"\\n')\n",
+    "for key in overallDF_Dic.keys():\n",
+    "    print('    ',key,'\\n')"
    ]
   },
   {
@@ -251,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "eacb3aef",
    "metadata": {},
    "outputs": [],
@@ -279,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "083d2857",
    "metadata": {},
    "outputs": [],
@@ -325,22 +372,23 @@
     "    mean = np.mean(dataArray)\n",
     "    median = np.median(dataArray)\n",
     "    \n",
-    "    for points in data:\n",
-    "        temp = np.mean(points[1])\n",
-    "        if ln_flag:\n",
-    "            point = np.log(points[0])\n",
-    "        else:\n",
-    "            point = points[0]\n",
-    "        if temp < 100:\n",
-    "            \n",
-    "            norm = point-min(dataArray)[0]\n",
+    "    if data.shape[1] > 1:\n",
+    "        for points in data:\n",
+    "            temp = np.mean(points[1])\n",
+    "            if ln_flag:\n",
+    "                point = np.log(points[0])\n",
+    "            else:\n",
+    "                point = points[0]\n",
+    "            if temp < 100:\n",
     "\n",
-    "            \n",
-    "            stepSize = (max(dataArray)[0] - min(dataArray)[0])/fineness_of_graph\n",
-    "            \n",
-    "            dif = round( norm/stepSize) -1\n",
-    "            \n",
-    "            plt.scatter(point,e[dif], c ='purple',)\n",
+    "                norm = point-min(dataArray)[0]\n",
+    "\n",
+    "\n",
+    "                stepSize = (max(dataArray)[0] - min(dataArray)[0])/fineness_of_graph\n",
+    "\n",
+    "                dif = round( norm/stepSize) -1\n",
+    "\n",
+    "                plt.scatter(point,e[dif], c ='purple',)\n",
     "            \n",
     "    plt.vlines(x=mean,ymin = min(e), ymax = max(e), colors = 'grey')\n",
     "    plt.vlines(x=median,ymin = min(e), ymax = max(e), colors = 'teal')\n",
@@ -352,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "25b86978",
    "metadata": {},
    "outputs": [],
@@ -372,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "0039e16e",
    "metadata": {},
    "outputs": [],
@@ -387,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "c8dcd126",
    "metadata": {},
    "outputs": [
@@ -443,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "812a8a1f",
    "metadata": {},
    "outputs": [
@@ -451,7 +499,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Run2-abram_abram_lpeg', 'Run1-abram_abram_lpeg'])\n",
       "Run2-abram_abram_lpeg\n",
       "Run1-abram_abram_lpeg\n"
      ]
@@ -460,7 +507,9 @@
    "source": [
     "split_graph_dic = {}\n",
     "\n",
-    "print(min_max_Dic.keys())\n",
+    "MAGIC_NUM_USED_TO_DECIDE_ON_WHAT_Y_VALUE_TO_SPLIT_DATA = 0\n",
+    "\n",
+    "#print(min_max_Dic.keys())\n",
     "for graph in min_max_Dic:\n",
     "    print(graph)\n",
     "    mi, ma = min_max_Dic[graph]\n",
@@ -473,7 +522,7 @@
     "    temp.append(currentDF.min())\n",
     "    \n",
     "    for val in loc_val:\n",
-    "        if val[1] < 0:\n",
+    "        if val[1] < MAGIC_NUM_USED_TO_DECIDE_ON_WHAT_Y_VALUE_TO_SPLIT_DATA:\n",
     "            temp.append(val[0])\n",
     "    \n",
     "    temp.append(currentDF.max())\n",
@@ -504,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "26da7324",
    "metadata": {
     "scrolled": true
@@ -561,7 +610,7 @@
        "dict_keys(['Run2-abram_abram_lpeg', 'Run1-abram_abram_lpeg'])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "id": "65d7e783",
    "metadata": {},
    "outputs": [
@@ -687,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "8b0e9363",
    "metadata": {},
    "outputs": [
